--- a/.config/i3/config
+++ b/.config/i3/config
@@ -27,7 +27,8 @@ font pango:monospace 8
 # font, it doesn’t scale on retina/hidpi displays.
 
 gaps inner 15
-gaps outer 15
+gaps outer 10
+default_border pixel
 
 # #---Dropdown Windows---# #
 # General dropdown window traits. The order can matter.
