sane copy-mode binding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,9 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# use v for copy-mode
+bind v copy-mode
+
 # split panes using | and -
 unbind '"'
 unbind %
