--- a/.config/i3/config
+++ b/.config/i3/config
@@ -57,6 +57,8 @@ for_window [instance="dropdown_tmuxdd"] border pixel 3
 for_window [instance="dropdown_dropdowncalc"] border pixel 2
 for_window [instance="dropdown_*"] move position center
 
+floating_maximum_size 1920 x -1
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -206,6 +208,7 @@ bindsym $mod+Shift+o    exec --no-startup-id i3resize right
 
 bindsym $mod+u          exec --no-startup-id ddspawn tmuxdd
 bindsym $mod+a          exec --no-startup-id ddspawn dropdowncalc -f mono:pixelsize=24
+bindsym $mod+m          exec --no-startup-id ddspawn ncmpcpp
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
