--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -99,10 +99,11 @@ min_width=CPU: 100.00%
 #
 # The battery instance defaults to 0.
 [batterybar]
-label=BAT
-#label=⚡
+#label=BAT
+label=⚡
 #instance=1
 interval=30
+markup=pango
 
 # Date Time
 #
