--- a/.config/i3/config
+++ b/.config/i3/config
@@ -65,7 +65,7 @@ floating_modifier $mod
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
 
-bindsym $mod+w exec firefox
+bindsym $mod+w exec chromium
 
 # kill focused window
 bindsym $mod+q kill
