--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -124,9 +124,9 @@ label-urgent = %index%!
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 2
 
-; label-empty = %index%
-; label-empty-foreground = ${colors.foreground-alt}
-; label-empty-padding = 2
+label-empty = %index%
+label-empty-foreground = ${colors.foreground-alt}
+label-empty-padding = 2
 
 ; Separator in between workspaces
 ; label-separator = |
