--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -39,11 +39,12 @@ fixed-center = false
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 3
+line-size = 1
 line-color = #f00
 
-border-size = 4
-border-color = #00000000
+border-size = 0
+border-bottom-size = 2
+border-color = ${colors.background}
 
 padding-left = 0
 padding-right = 2
