--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,14 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
+# Resixe tmux panes and vim splits with Alt + hjkl
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
+
+bind -n M-h if-shell "$is_vim" "send-keys M-h" "resize-pane -L 10"
+bind -n M-l if-shell "$is_vim" "send-keys M-l" "resize-pane -R 10"
+bind -n M-k if-shell "$is_vim" "send-keys M-k" "resize-pane -U 5"
+bind -n M-j if-shell "$is_vim" "send-keys M-j" "resize-pane -D 5"
+
 # # smart pane switching with awareness of vim splits
 # bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
 # bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
