--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -17,8 +17,8 @@
 ;==========================================================
 
 [colors]
-background = [70]${xrdb:color0:#222}
-;background = #222
+; background = ${xrdb:color0:#222}
+background = #d01B1D1E
 background-alt = #444
 foreground = ${xrdb:color7:#222}
 ;foreground = #dfdfdf
