--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,8 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Source Code Pro Medium
+font_family      SauceCodePro Nerd Font
+# font_family      Source Code Pro Medium
 # font_family      monospace
 # bold_font        auto
 # italic_font      auto
