--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -20,19 +20,110 @@
 ; background = ${xrdb:color0:#222}
 background = #d01B1D1E
 background-alt = #444
-foreground = ${xrdb:color7:#222}
+foreground = #bbb
 ;foreground = #dfdfdf
 foreground-alt = #555
 primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
 
-[bar/example]
-monitor = ${env:MONITOR:}
+;[bar/example]
+;monitor = ${env:MONITOR:}
+;width = 100%
+;height = 27
+;;offset-x = 1%
+;;offset-y = 1%
+;radius = 0.0
+;fixed-center = false
+
+;background = ${colors.background}
+;foreground = ${colors.foreground}
+
+;line-size = 1
+;line-color = #f00
+
+;border-size = 0
+;border-bottom-size = 2
+;border-color = ${colors.background}
+
+;padding-left = 0
+;padding-right = 2
+
+;module-margin-left = 1
+;module-margin-right = 2
+
+;font-0 = fixed:pixelsize=10;1
+;font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
+;font-2 = siji:pixelsize=10;1
+;font-3 = SauceCodePro Nerd Font:style=Regular:size=11
+
+;modules-left = bspwm
+;;modules-center = mpd
+;modules-right = polypomo filesystem xbacklight pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu
+
+;tray-position = right
+;tray-padding = 2
+;;tray-background = #0063ff
+
+;wm-restack = bspwm
+;;wm-restack = i3
+
+;;override-redirect = true
+
+;;scroll-up = bspwm-desknext
+;;scroll-down = bspwm-deskprev
+
+;;scroll-up = i3wm-wsnext
+;;scroll-down = i3wm-wsprev
+
+;cursor-click = pointer
+;cursor-scroll = ns-resize
+
+[bar/left_bspwm]
+monitor = DP-0
 width = 100%
 height = 27
-;offset-x = 1%
-;offset-y = 1%
+radius = 0.0
+fixed-center = false
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 1
+line-color = #f00
+
+border-size = 2
+border-bottom-size = 2
+border-color = ${colors.background}
+
+padding-left = 0
+padding-right = 2
+
+module-margin-left = 2
+module-margin-right = 3
+
+font-0 = fixed:pixelsize=10;1
+font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
+font-2 = siji:pixelsize=10;1
+font-3 = SauceCodePro Nerd Font:style=Regular:size=11
+
+modules-left = bspwm
+;modules-center = mpd
+modules-right = polypomo pulseaudio xkeyboard date powermenu
+
+tray-position = right
+tray-padding = 2
+;tray-background = #0063ff
+
+wm-restack = bspwm
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+[bar/right_bspwm]
+monitor = DVI-I-1
+width = 100%
+height = 27
 radius = 0.0
 fixed-center = false
 
@@ -55,28 +146,32 @@ module-margin-right = 2
 font-0 = fixed:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
+font-3 = SauceCodePro Nerd Font:style=Regular:size=11
 
 modules-left = bspwm
-;modules-center = mpd
-modules-right = filesystem xbacklight alsa pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu
+modules-center = date
+; modules-right = pulseaudio xkeyboard date powermenu
 
-tray-position = right
-tray-padding = 2
-;tray-background = #0063ff
-
-;wm-restack = bspwm
-;wm-restack = i3
-
-;override-redirect = true
-
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
-
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
+wm-restack = bspwm
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+[module/polypomo]
+type = custom/script
+
+exec = ~/.config/polybar/scripts/polypomo/polypomo
+tail = true
+
+label = %output%
+click-left = ~/.config/polybar/scripts/polypomo/polypomo toggle
+click-right = ~/.config/polybar/scripts/polypomo/polypomo end
+click-middle = ~/.config/polybar/scripts/polypomo/polypomo lock
+scroll-up = ~/.config/polybar/scripts/polypomo/polypomo time +60
+scroll-down = ~/.config/polybar/scripts/polypomo/polypomo time -60
+
+font-0 = fixed:pixelsize=10;1
+font-1 = Noto Emoji:scale=15:antialias=false;0
 
 [module/xwindow]
 type = internal/xwindow
@@ -112,21 +207,32 @@ label-unmounted-foreground = ${colors.foreground-alt}
 enable-scroll  = true
 type = internal/bspwm
 
-;label-focused = %index%
-label-focused-background = ${colors.background-alt}
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;拾
+ws-icon-3 = 4;戮
+ws-icon-4 = 5;
+ws-icon-5 = 6;
+ws-icon-6 = 7;7
+ws-icon-7 = 8;8
+ws-icon-8 = 9;
+ws-icon-9 = 10;
+
+label-focused = %icon%
+; label-focused-background = ${colors.background-alt}
 label-focused-underline= ${colors.primary}
-label-focused-padding = 2
+label-focused-padding = 4
 
-;label-occupied = %index%
-label-occupied-padding = 2
+label-occupied = %icon%
+label-occupied-padding = 4
 
-;label-urgent = %index%!
+label-urgent = %icon%!
 label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+label-urgent-padding = 4
 
-;label-empty = %index%
+label-empty = %icon%
 label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2
+label-empty-padding = 4
 
 ; Separator in between workspaces
 ; label-separator = |
@@ -207,7 +313,7 @@ ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
 type = internal/network
-interface = eno1
+interface = bridge0
 interval = 3.0
 
 format-connected-underline = #55aa55
@@ -231,17 +337,19 @@ date-alt = " %Y-%m-%d"
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = 
+; format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
 ;format-underline = #0a6cf5
 
 label = %date% %time%
+; label-font = 4
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
 format-volume = <label-volume> <bar-volume>
-label-volume = VOL %percentage%%
+label-volume = "  "
+; label-volume = VOL %percentage%%
 label-volume-foreground = ${root.foreground}
 
 label-muted = 🔇 muted
@@ -256,7 +364,7 @@ bar-volume-foreground-4 = #55aa55
 bar-volume-foreground-5 = #f5a70a
 bar-volume-foreground-6 = #ff5555
 bar-volume-gradient = false
-bar-volume-indicator = |
+bar-volume-indicator = 
 bar-volume-indicator-font = 2
 bar-volume-fill = ─
 bar-volume-fill-font = 2
